# contrib/routes/carsession.go
@@ -11,18 +11,35 @@ import (
 )
 
 func CarSessionRoute(app fiber.Router, db *gorm.DB) {
-	group := app.Group("/car-session")
+	group := app.Group("/session-car")
 
 	// Wrap middleware with db
-	group.Get("/", middleware.AuthToken(
-		db,
-		[]models.RoleType{models.AdminRole, models.AccountantRole, models.OperatorRole},
-		true,
-	), func(c *fiber.Ctx) error {
+	group.Get("/", 
+	// middleware.AuthToken(
+	// 	db,
+	// 	[]models.RoleType{models.AdminRole, models.AccountantRole, models.OperatorRole},
+	// 	true,
+	// ),
+	 func(c *fiber.Ctx) error {
 		commons := core.GetCommonsFromContext(c)
 		return controllers.RetrieveCarSessionsApi(c, db, commons)
 	}).Name("car-session-list")
 
+	group.Post(
+		"/event/entry/",
+		func(c *fiber.Ctx) error {
+
+			return controllers.CarSessionEventEntryApi(c, db)
+		},
+	).Name("car-session-event-entry")
+	
+	group.Post(
+		"/event/exit/",
+		func(c *fiber.Ctx) error {
+			return controllers.CarSessionEventExitApi(c, db)
+		},
+	).Name("car-session-event-exit")
+	
 	group.Get(
 		"/count/",
 		middleware.AuthToken(
@@ -33,11 +50,4 @@ func CarSessionRoute(app fiber.Router, db *gorm.DB) {
 		func(c *fiber.Ctx) error {
 			return controllers.CountCarSessionsApi(c, db)
 		}).Name("car-session-count")
-	group.Post(
-		"/event/entry/",
-		func(c *fiber.Ctx) error {
-
-			return controllers.CountCarSessionsApi(c, db)
-		},
-	).Name("car-session-event-entry")
 }
