# docs/swagger.json
@@ -645,7 +645,6 @@
                         ]
                     }
                 ],
-                "description": "Retrieves a count of cars",
                 "consumes": [
                     "application/json"
                 ],
@@ -655,7 +654,6 @@
                 "tags": [
                     "Cars"
                 ],
-                "summary": "Count returns total cars count",
                 "responses": {
                     "200": {
                         "description": "count: 12345",
@@ -673,6 +671,72 @@
                         "description": "detail: Permission denied",
                         "schema": {
                             "$ref": "#/definitions/PermissionDeniedResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "detail: Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/InternalServerErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/car-session/event/entry/": {
+            "post": {
+                "tags": [
+                    "Cars"
+                ],
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "requestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "count: 12345",
+                        "schema": {
+                            "$ref": "#/definitions/CarSessionMessageResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "detail: Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/InternalServerErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/car-session/event/exit/": {
+            "post": {
+                "tags": [
+                    "Cars"
+                ],
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "requestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "count: 12345",
+                        "schema": {
+                            "$ref": "#/definitions/CarSessionMessageResponse"
                         }
                     },
                     "500": {
@@ -2148,6 +2212,17 @@
                 },
                 "updatedAt": {
                     "description": "optional, can be nil",
+                    "type": "string"
+                }
+            }
+        },
+        "CarSessionMessageResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/CarSessionResponse"
+                },
+                "message": {
                     "type": "string"
                 }
             }
